2023.10 Refactored.